08/11/2011 Changes

Adding Block support. Will handle ^ blocks soon.


07/11/2011 Changes

Creating proper instances of True and False during bootstrapping.


05/11/2011 Changes

Added support for arrays, including nested arrays.

Switching Integer classes to use BigInteger instead of BigDecimal.
Adding in superclass and cls for singletons True and False.

03/11/2011 Changes

Added support for temporaries - getting and setting.

02/11/2011 Changes

Added a 'context' parameter to each method call to contain the call context items, like class method 
found in, temporary variables and other items.
Passing a 'context' to Eigenclass applyTo method; used for scripts that have temporaries.

Modified grammar to support negative and positive numeric constants.
Started implementing the Character class.
Implemented createCharacter in Primitives.

Started temporaries support.


31/10/2011 Changes

There have been various changes between 28/09/2011 and now, however we have have neglected to update
the changes file. Oops.

Removing extra parameter to Eigenclass applyTo method.
Changing classMesthodWasFoundIn parameter to thisContext array.


28/09/2011 Changes

Adding more support for initializing Class variables.


27/09/2011 Changes

Added support for initializing Class variables.


26/09/2011 Changes

A few example file changes to exercise variables.
Added Router class to map http routes to handlers within Stout. Contributed by 
Jacky Cheung.


25/09/2011 Changes

Output some trace to let you know instance variables are being initialized.
Fixing off-by-one error in MethodAnalyser that was breaking method arguments
Implementing more of the Object protocol (comparing, testing, accessing)


23/09/2011 Changes

Added indication of instance or class to method compilation. This is useful for handling
instance variable resolution.
Adding storage and methods for recording what variables a class has, instance and class instance.


17/09/2011 Changes
