@@ -1,2 +1,2 @@
-[] value.
+[Transcript show: 'Hello World.'; cr; cr.] value.
 
